--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,8 @@ gast==0.6.0
 gdown==5.2.0
 google-pasta==0.2.0
 grpcio==1.71.0
+gunicorn==23.0.0
+h11==0.14.0
 h5py==3.13.0
 idna==3.10
 itsdangerous==2.2.0
@@ -45,6 +47,7 @@ termcolor==2.5.0
 tqdm==4.67.1
 typing_extensions==4.12.2
 urllib3==2.3.0
+uvicorn==0.34.0
 Werkzeug==3.1.3
 wheel==0.45.1
 wrapt==1.17.2
