--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 absl-py==2.2.0
+annotated-types==0.7.0
+anyio==4.9.0
 astunparse==1.6.3
 beautifulsoup4==4.13.3
 blinker==1.9.0
@@ -6,6 +8,7 @@ certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.1.8
 colorama==0.4.6
+fastapi==0.115.12
 filelock==3.18.0
 Flask==3.1.0
 flatbuffers==25.2.10
@@ -33,13 +36,18 @@ optree==0.14.1
 packaging==24.2
 pillow==11.1.0
 protobuf==5.29.4
+pydantic==2.10.6
+pydantic_core==2.27.2
 Pygments==2.19.1
 PySocks==1.7.1
+python-multipart==0.0.20
 requests==2.32.3
 rich==13.9.4
 setuptools==77.0.3
 six==1.17.0
+sniffio==1.3.1
 soupsieve==2.6
+starlette==0.46.1
 tensorboard==2.19.0
 tensorboard-data-server==0.7.2
 tensorflow==2.19.0
