--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,12 @@
+
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "app.py",
-      "use": "@vercel/python"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "app.py"
-    }
-  ]
+  "build": {
+    "env": {
+      "PYTHON_VERSION": "3.10"
+    },
+    "commands": [
+      "pip install --upgrade pip",
+      "pip install -r requirements.txt --target ."
+    ]
+  }
 }
