--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,15 @@
-
 {
-  "build": {
-    "env": {
-      "PYTHON_VERSION": "3.10"
-    },
-    "commands": [
-      "pip install --upgrade pip",
-      "pip install -r requirements.txt --target ."
-    ]
-  }
+  "version": 2,
+  "builds": [
+    {
+      "src": "main.py",
+      "use": "@vercel/python"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "main.py"
+    }
+  ]
 }
